# PyFoxFile

./: .gitattributes  FoxFile.fox  KitsuneFile.kitsune  altarchivefile.py  altfoxfile.py  archivefile.ini  archivefile.py  archivefile.sh  foxfile.ini  foxfile.py  foxfile.sh  mkarchivefilebundle  mkarchivefilebundle.py  neoarchivefile.py  neoarchivefile.sh  neofoxfile.py  neofoxfile.sh  phparchivefile.php  phpfoxfile.php  pyarchivefile.py  pyarchivefile_test.py  pyarchivefilealt.py  pyarchivefilealt_test.py  pyfoxfile.py  pyproject.toml  pyshell-old.py  pyshell.py  setup.py  キツネファイル.キツネ
