[project]
    name = "PyArchiveFile"
    version = "0.17.4"
    readme = "README.md
    license = "BSD-3-Clause"
    keywords = []
    description = "A tar like file format name archivefile after unix cat command (concatenate files) ."
    authors = [
        { name = "Kazuki Przyborowski", email = "kazuki.przyborowski@gmail.com" },
    ]
    